--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,13 +16,6 @@
    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-
-<!-- ClickTale Top part -->
-<script type="text/javascript">
-var WRInitTime=(new Date()).getTime();
-</script>
-<!-- ClickTale end of Top part -->
-
 <div class="site">
   <div class="title">
     <a href="/">Łukasz Badura</a>
@@ -55,15 +48,14 @@ var WRInitTime=(new Date()).getTime();
 
 <a href="http://github.com/lbadura"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
 
-<!-- ClickTale Bottom part -->
-<div id="ClickTaleDiv" style="display: none;"></div>
 <script type="text/javascript">
-if(document.location.protocol!='https:')
-  document.write(unescape("%3Cscript%20src='http://s.clicktale.net/WRb.js'%20type='text/javascript'%3E%3C/script%3E"));
+var disqus_shortname = 'ramblingaboutsoftware';
+(function () {
+  var s = document.createElement('script'); s.async = true;
+  s.src = 'http://disqus.com/forums/ramblingaboutsoftware/count.js';
+  (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+}());
 </script>
-<script type="text/javascript">
-if(typeof ClickTale=='function') ClickTale(206,0.3,"www03");
-</script>
-<!-- ClickTale end of Bottom part -->
+
 </body>
 </html>
