--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,61 +1,34 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
-<head>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>{{ page.title }}</title>
-   <meta name="author" content="Łukasz Badura" />
-
-   <!-- syntax highlighting CSS -->
-   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
-
-   <!-- Homepage CSS -->
-   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
-
-   <!-- Typekit -->
-   <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
-   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-</head>
-<body>
-<div class="site">
-  <div class="title">
-    <a href="/">Łukasz Badura</a>
-    <a class="extra" href="/">home</a>
-  </div>
-  
-  {{ content }}
-  
-  <div class="footer">
-
-    <div class="contact">
-      <p>
-        Łukasz Badura<br />
-      </p>
-    </div>
-    <div class="contact">
-      <p>
-        <a href="http://github.com/lbadura/">github.com/lbadura</a><br />
-        <a href="http://twitter.com/lbadura/">twitter.com/lbadura</a><br />
-        <a href="http://flickr.com/photos/ukasbadu/">flickr.com/photos/ukasbadu</a>
-      </p>
-    </div>
-    <div class="contact">
-      <p>Layout based on the work of <a href="http://tom.preston-werner.com/">Tom Preston-Wener</a></p>
-    </div>
-  </div>
-
-</div>
-
-
-<a href="http://github.com/lbadura"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
-
-<script type="text/javascript">
-var disqus_shortname = 'ramblingaboutsoftware';
-(function () {
-  var s = document.createElement('script'); s.async = true;
-  s.src = 'http://disqus.com/forums/ramblingaboutsoftware/count.js';
-  (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-}());
-</script>
-
+<html ang="en-us">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>{{ page.title }}</title>
+        <meta name="author" content="Łukasz Badura" />
+        <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
+        <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+    </head>
+    <body>
+    <header>
+        <div class="title">
+            <a href="/">Łukasz Badura</a><br/>
+            <a class="extra" href="/">Rambling about software</a>
+        </div>
+    </header>
+    <section class="page-body">{{ content }}</section>
+    <footer class="page-footer">
+        &copy; 2011 Łukasz Badura. All rights reserved.
+        <a href="http://pl.linkedin.com/in/lukaszbadura"><img src="http://i.imgur.com/X8nZQ.png" alt="Hosted by imgur.com" /></a>
+        <a href="http://twitter.com/lbadura/"><img src="http://i.imgur.com/lGUOt.png" alt="Hosted by imgur.com" /></a>
+        <a href="http://flickr.com/photos/ukasbadu/"><img src="http://i.imgur.com/oCcnx.png" alt="Hosted by imgur.com" /></a>
+    </footer>
+    <a href="http://github.com/lbadura"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
+    <script type="text/javascript">
+        var disqus_shortname = 'ramblingaboutsoftware';
+        (function () {
+            var s = document.createElement('script'); s.async = true;
+            s.src = 'http://disqus.com/forums/ramblingaboutsoftware/count.js';
+            (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+        }());
+    </script>
 </body>
 </html>
