--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,20 +1,27 @@
 ---
 layout: default
 ---
-<div id="post">
-{{ content }}
-</div>
+<article class="post">
+    <header>
+        <h1 class="post-title">{{ page.title }}</h1>
+        <time datetime="{{ page.date | xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>
+    </header>
+    <body>
+        {{ content }}
+    </body>
+</article>
 
 <div id="disqus_thread"></div>
 
-<div id="related">
-  <h2>Related Posts</h2>
+<section id="related">
+  <h1>RELATED POSTS</h1>
   <ul class="posts">
     {% for post in site.related_posts limit:3 %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
-</div>
+</section>
+
 <div id="disqus_thread"></div>
 <script type="text/javascript">
   /**
