--- a/css/screen.css
+++ b/css/screen.css
@@ -1,197 +1,163 @@
-/*****************************************************************************/
-/*
-/* Common
-/*
-/*****************************************************************************/
-
-/* Global Reset */
-
-* {
-  margin: 0;
-  padding: 0;
+html,body,div,span,applet,object,iframe,
+h1,h2,h3,h4,h5,h6,p,blockquote,pre,
+a,abbr,acronym,address,big,cite,code,
+del,dfn,em,img,ins,kbd,q,s,samp,
+small,strike,strong,sub,sup,tt,var,
+b,u,i,center,
+dl,dt,dd,ol,ul,li,
+fieldset,form,label,legend,
+table,caption,tbody,tfoot,thead,tr,th,td,
+article,aside,canvas,details,figcaption,figure,
+footer,header,hgroup,menu,nav,section,summary,
+time,mark,audio,video{
+    margin:0;
+    padding:0;
+    border:0;
+    outline:0;
+    font-size:100%;
+    font:inherit;
+    vertical-align:baseline;
 }
 
-html, body {
-  height: 100%;
+/* HTML5 display-role reset for older browsers */
+article,aside,details,figcaption,figure,
+footer,header,hgroup,menu,nav,section{
+    display:block;
 }
+
+body{
+    line-height:1;
+}
+
+ol,ul{
+    list-style:none;
+}
+
+blockquote,q{
+    quotes:none;
+}
+
+blockquote:before,blockquote:after,
+q:before,q:after{
+    content:'';
+    content:none;
+}
+
+/* remember to define visible focus styles!
+:focus{
+  outline:?????;
+} */
+
+/* remember to highlight inserts somehow! */
+ins{
+    text-decoration:none;
+}
+del{
+    text-decoration:line-through;
+}
+
+table{
+    border-collapse:collapse;
+    border-spacing:0;
+}
+
+/*------------------------------------*\
+  MAIN
+\*------------------------------------*/
 
 body {
-  background-color: white;
-  font: 13.34px helvetica, arial, clean, sans-serif;
-  *font-size: small;
-  text-align: center;
+    font-family: Cambria, Georgia, 'Times New Roman', Times, serif;
+    color: #666;
+    font: 13.34px helvetica,arial,freesans,clean,sans-serif
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-size: 100%;
+.page-body {
+    margin: 0 auto;
+    width: 70%;
+}
+
+#home, article.post {
+    padding-top: 60px;
 }
 
 h1 {
-  margin-bottom: 1em;
+    font-size: 1.2em;
+    line-height: 1em;
+    margin: 0.1em 0px;
+    color: #000000;
+    font-weight: bold;
 }
 
-p {
-  margin: 1em 0;
+#home h1 {
+    font-size: 1.4em;
+    margin: 20px 0;
+}
+
+ul.posts li {
+    line-height: 1em;
+    margin: 2px 0;
+    font-size: 1.3em;
+}
+
+ul.posts {
+    line-height: 1em;
+    margin: 10px 0;
 }
 
 a {
-  color: #00a;
+    color: #5f3032;
 }
 
-a:hover {
-  color: black;
+p {
+    font-size: 1.2em;
+    display: block;
+    line-height: 1.4em;
+    margin: 1em 0px;
 }
 
-a:visited {
-  color: #a0a;
+h1.post-title {
+    color: #8e1e2b;
+    font-size: 3em;
 }
 
-table {
-  font-size: inherit;
-  font: 100%;
+section#related {
+    margin-top: 15px;
 }
 
-/*****************************************************************************/
-/*
-/* Home
-/*
-/*****************************************************************************/
+article header time {
+    display: block;
+    text-align: right;
+    color: #999;
+    font-size: 1.2em;
+    padding-bottom: 0.75em; }
 
-ul.posts {
-  list-style-type: none;
-  margin-bottom: 2em;
+div#disqus_thread {
+    margin: 20px auto;
 }
 
-  ul.posts li {
-    line-height: 1.75em;
-  }
-
-  ul.posts span {
-    color: #aaa;
-    font-family: Monaco, "Courier New", monospace;
-    font-size: 80%;
-  }
-
-/*****************************************************************************/
-/*
-/* Site
-/*
-/*****************************************************************************/
-
-.site {
-  font-size: 110%;
-  text-align: justify;
-  width: 40em;
-  margin: 3em auto 2em auto;
-  line-height: 1.5em;
+.page-footer {
+    vertical-align: middle;
+    margin: 40px 0 5px 40px;
 }
 
-.title {
-  color: #a00;
-  font-weight: bold;
-  margin-bottom: 2em;
-}
-
-  .site .title a {
-    color: #a00;
+.page-footer a {
     text-decoration: none;
-  }
-
-  .site .title a:hover {
-    color: black;
-  }
-
-  .site .title a.extra {
-    color: #aaa;
-    text-decoration: none;
-    margin-left: 1em;
-  }
-
-  .site .title a.extra:hover {
-    color: black;
-  }
-
-  .site .meta {
-    color: #aaa;
-  }
-
-  .site .footer {
-    font-size: 80%;
     color: #666;
-    border-top: 4px solid #eee;
-    margin-top: 2em;
-    overflow: hidden;
-  }
-
-    .site .footer .contact {
-      float: left;
-      margin-right: 3em;
-    }
-
-      .site .footer .contact a {
-        color: #8085C1;
-      }
-
-    .site .footer .rss {
-      margin-top: 1.1em;
-      margin-right: -.2em;
-      float: right;
-    }
-
-      .site .footer .rss img {
-        border: 0;
-      }
-
-/*****************************************************************************/
-/*
-/* Posts
-/*
-/*****************************************************************************/
-
-#post {
-
 }
 
-  /* standard */
-
-  #post pre {
-    border: 1px solid #ddd;
-    background-color: #eef;
-    padding: 0 .4em;
-  }
-
-  #post ul,
-  #post ol {
-    margin-left: 1.35em;
-  }
-
-  #post code {
-    border: 1px solid #ddd;
-    background-color: #eef;
-    font-size: 85%;
-    padding: 0 .2em;
-  }
-
-    #post pre code {
-      border: none;
-    }
-
-  /* terminal */
-
-  #post pre.terminal {
-    border: 1px solid black;
-    background-color: #333;
-    color: white;
-  }
-
-  #post pre.terminal code {
-    background-color: #333;
-  }
-
-#related {
-  margin-top: 2em;
+div.title {
+    margin: 10px 0 0 30px;
 }
 
-  #related h2 {
-    margin-bottom: 1em;
-  }
+.title a {
+    color: #8e1e2b;
+    font-size: 2em;
+    text-decoration: none;
+}
+
+a.extra {
+    font-size: 1.2em;
+    padding-bottom: 10px;
+    text-decoration: none;
+    color: #666;
+}
