--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
         <meta name="author" content="Łukasz Badura" />
         <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
         <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+        <link href="atom.xml" type="application/atom+xml" rel="alternate" title="Rambling about software feed" />
     </head>
     <body>
     <header>
