--- a/css/screen.css
+++ b/css/screen.css
@@ -161,3 +161,26 @@ a.extra {
     text-decoration: none;
     color: #666;
 }
+
+article ol, article ul {
+    margin: 1em 0;
+}
+
+article li {
+    font-size: 1.2em;
+    line-height: 1.4;
+    list-style-type: square;
+    margin-left: 20px;
+}
+
+em {
+  font-style: italic;
+  color: #333;
+}
+
+code {
+  background-color: #eee;
+  color: #000;
+  padding: 2px;
+  font-family: monospace;
+}
